--- a/css/styles.css
+++ b/css/styles.css
@@ -2,23 +2,91 @@ body {
     font-family: "Roboto", sans-serif;
     color: #434455;
     background-color: #fff;
-}
-ul {
     list-style-type: none;
-    margin: 0;
+}
+
+ul, ol {
+    list-style-type: none;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: 0;
     padding-left: 0;
 }
+
 a {
     text-decoration: none;
+    font-style: normal;
 }
+
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
 button {
-    background-color: #4d5ae5;
+    cursor: pointer;
 }
-h1, h2, h3, h4, h5, h6, p {
-        margin: 0;
+
+h1,
+h2,
+h3, 
+h4, 
+h5, 
+h6, 
+p {
+        margin-top: 0;
+        margin-bottom: 0;
 }
 
 
+.container {
+        max-width: 1158px;
+        padding-left: 15px;
+        padding-right: 15px;
+        margin-left: auto;
+        margin-right: auto;
+}
+
+
+.sect-padding {
+        padding-top: 120px;
+        padding-bottom: 120px;
+}
+
+.title {
+        padding-top: 120px;
+        padding-bottom: 72px;
+}
+
+
+.header-bord {
+        border-bottom: 1px solid  #e7e9fc; 
+}
+.header-container {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+}
+
+
+.navig {
+        display: flex;
+        align-items: center;
+}
+
+
+.nav-page-menu {
+        display: flex;
+        gap: 40px;
+}
+
+
+.address-menu {
+        display: flex;
+        gap: 40px;
+        margin-left: auto;
+}
 
 .logo {
         font-family: "Raleway", sans-serif;
@@ -28,14 +96,9 @@ h1, h2, h3, h4, h5, h6, p {
         letter-spacing: 0.03em;
         text-transform: uppercase;
         color: #4d5ae5;
+        margin-right: 76px;
 }
 .logo-part {
-        font-family: "Raleway", sans-serif;
-        font-weight: 700;
-        font-size: 18px;
-        line-height: 1.17;
-        letter-spacing: 0.03em;
-        text-transform: uppercase;
         color: #2e2f42;
 }
  
@@ -48,22 +111,22 @@ h1, h2, h3, h4, h5, h6, p {
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #2e2f42;
+        display: block;
+        padding: 24px 0;
 }
+.nav-menu-links:active,
 .nav-menu-links:hover,
 .nav-menu-links:focus {
-        font-family: inherit;
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
         color: #404BBF;
 }
   
 
 
 .address {
+        margin-left: 332px;
     font-style: normal;
 }
+
 .addr-links {
        font-family: inherit;
        font-weight: 400;
@@ -72,13 +135,10 @@ h1, h2, h3, h4, h5, h6, p {
        letter-spacing: 0.02em;
        color: #434455;
 }
+
+.addr-links:active,
 .addr-links:hover,
 .addr-links:focus {
-        font-family: inherit;
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
         color: #404BBF;
 }
 
@@ -86,6 +146,9 @@ h1, h2, h3, h4, h5, h6, p {
 
 .hero-sect {
     background-color: #2e2f42;
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 188px 0;
 }
 .hero-title {
         font-family: inherit;
@@ -95,6 +158,9 @@ h1, h2, h3, h4, h5, h6, p {
         letter-spacing: 0.02em;
         text-align: center;
         color: #fff;
+        max-width: 496px;
+        margin-bottom: 48px;
+        margin: 0 auto;
 }
 .hero-button {
         font-family: inherit;
