--- a/css/styles.css
+++ b/css/styles.css
@@ -61,9 +61,9 @@ p {
 }
 .header-container {
         display: flex;
-        align-items: center;
         justify-content: space-between;
         flex-direction: row;
+        align-items: center;
         
 }
 
@@ -87,6 +87,7 @@ p {
         display: flex;
         gap: 40px;
         flex-direction: row;
+        margin-left: auto;
 }
 
 .logo {
