--- a/css/styles.css
+++ b/css/styles.css
@@ -174,7 +174,7 @@ p {
         border-radius: 4px;
         border: none;
         min-width: 169px;
-        margin: 48px auto;
+        margin: 48px auto 0 auto;
 }
 .hero-button:hover,
 .hero-button:focus {
@@ -233,7 +233,7 @@ p {
 
 
 .t-sect {
-    background-color: #f4f4fd;
+    background-color: #fff;
 }
 .list-team {
         background-color: #fff;
@@ -260,7 +260,7 @@ p {
         text-align: center;
         color: #2e2f42;
         text-transform: capitalize;
-        margin-bottom: 72px;
+        
 }
 
 .t-names {
@@ -282,9 +282,7 @@ p {
         text-align: center;
         color: #434455;
 }
-.t-menu-text {
-        padding: 32px 0;
-}
+
 
 
 
@@ -298,7 +296,7 @@ p {
         text-align: center;
         color: #2e2f42;
         text-transform: capitalize;
-        margin-bottom: 72px;
+        
 }
 .portf-menu {
     background-color: #fff;
